--- a/src/App.css
+++ b/src/App.css
@@ -9,6 +9,23 @@ body {
   font-family: 'Open Sans', sans-serif;
 }
 
+.app-header {
+  top: 0;
+  display: flex;
+  height: 10%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  font-size: calc(10px + 2vmin);
+  color: white;
+}
+
+.app-logo {
+  height: 40vmin;
+  pointer-events: none;
+  float: right;
+}
+
 h1, h2, h3, h5 {
   margin: 0;
 }
@@ -48,14 +65,22 @@ h1, h2, h3, h5 {
   transition: all ease 200ms;
 }
 
-.card:hover {
-  transform: scale(1.03);
-  box-shadow: 0 13px 40px -5px hsla(240, 30.1%, 28%, 0.12), 0 8px 32px -8px hsla(0, 0%, 0%, 0.14), 0 -6px 32px -6px hsla(0, 0%, 0%, 0.02);
+.card .eventTime{
+  color: #bbb;
+  font-weight: 700;
+  font-size: 0.7em;
+  letter-spacing: 0.04em;
+  margin-bottom: 0.8em;
 }
 
-.card img {
-  width: 100%;
-  object-fit: cover;
+.card .address{
+  color: #777;
+  margin: auto;
+}
+
+.card:hover {
+  transform: scale(1.23);
+  box-shadow: 0 13px 40px -5px hsla(240, 30.1%, 28%, 0.12), 0 8px 32px -8px hsla(0, 0%, 0%, 0.14), 0 -6px 32px -6px hsla(0, 0%, 0%, 0.02);
 }
 
 .card h2 {
@@ -70,6 +95,7 @@ h1, h2, h3, h5 {
 
 .card p {
   color: #777;
+  margin: auto;
 }
 
 .card h5 {
